--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# Data from AidMe (for checking purpose)
+UserGrammar/
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -26,6 +29,8 @@ share/python-wheels/
 .installed.cfg
 *.egg
 MANIFEST
+logs/
+saved_models/
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
